single app.scss

--- a/app5K/__alps/content-data.html
+++ b/app5K/__alps/content-data.html
@@ -1,7 +1,7 @@
 <!doctype html><meta charset="utf-8">
 <title>content-data</title>
 <link href="app/vendor/sakura/css/zl_sakura.css" rel="stylesheet" type="text/css">
-<body class="design sakura-body">
+<body class="design">
 
 
 <figure>
