--- a/app5K/__alps/index.html
+++ b/app5K/__alps/index.html
@@ -19,16 +19,12 @@
 
     <!-- ## Critical Bootstrap CSS -->
     <style>
-        html { margin:0; padding:0; }
-        body { margin:0; padding:1rem; }
         img, svg { max-width:100%; }
     </style>
 
     <!-- ## app libs v5002 -->
     <!-- / core style -->
-    <link href="app/style/sakura/zl_sakura.css" rel="stylesheet" type="text/css">
-    <link href="app/style/app_interface.css" rel="stylesheet" type="text/css" media="all" />
-    <link href="app/style/design.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="app/style/app.css" rel="stylesheet" type="text/css">
     <!-- / core script libs -->
     <script src="app/vendor/lodash/lodash.min.js"></script>
     <script src="app/vendor/domtastic/domtastic.min.js"></script>
@@ -48,12 +44,239 @@
     <!-- =================================================== [HEAD OTHERS] -->
 
 </head>
-<body class="yiWallpaper design">
+<body>
 
 <!-- =================================================== ʕ⊙ᴥ⊙ʔ  -->
 <!-- =================================================== [TOP] -->
 
+<main class="role-content role-content-design article-layout">
 
+<p>v2018.8.25</p>
+
+<figure illustration>
+    <img src="art/alps.jpg" alt="Alps">
+    <figcaption>
+        Рис. 0. Когда Рим воевал с Карфагеном, в Испании находилась армия со слонами.
+    </figcaption>
+</figure>
+<aside>
+
+    <figure illustration>
+        <img src="art/alps.jpg" alt="Alps">
+    </figure>
+
+    <p>
+    К северу возвышается белая гора Mont Blanc — самая высокая вершина Альп. Князь Вяземский написал о своих впечатлениях в 1855 году:
+    </p>
+
+    <p>
+    Когда Рим воевал с Карфагеном, в Испании находилась армия со слонами. Полководец Ганнибал повёл войска через Альпы. Это был тяжёлый путь. Римляне не ожидали, что кто-то сможет пересечь горы. Воины со слонами справились и прогулялись по Италии.
+    </p>
+
+</aside>
+
+<p>
+По северу Италии течёт река По. Такая же фамилия у американского писателя и поэта. Эдгар Аллан По придумал схему детектива, ставшую традиционной для жанра:
+</p>
+
+<figure illustration>
+    <img src="art/europe-map.svg" alt="Alps"  width="100%">
+    <figcaption>
+        Рис. 1. Когда Рим воевал с Карфагеном, в Испании находилась армия со слонами.
+    </figcaption>
+</figure>
+
+<h3>Эдгар Аллан По</h3>
+
+<p>
+По северу Италии течёт река По. Такая же фамилия у американского писателя и поэта. Эдгар Аллан По придумал схему детектива, ставшую традиционной для жанра:
+</p>
+
+<ol type="a">
+    <li>совершается преступление;
+    <li>проходит расследование с осмотром места и улик;
+    <li>разоблачение преступника.
+</ol>
+
+<h3>Ганнибал Барка и слоны</h3>
+
+<p>
+Когда Рим воевал с Карфагеном, в Испании находилась армия со слонами. Полководец Ганнибал повёл войска через Альпы. Это был тяжёлый путь. Римляне не ожидали, что кто-то сможет пересечь горы. Воины со слонами справились и прогулялись по Италии.
+</p>
+
+<figure illustration is-different>
+    <img src="art/alps-title.svg" alt="Alps" width="100%">
+    <figcaption>
+        Рис. 2. Когда Рим воевал с Карфагеном, в Испании находилась армия со слонами.
+    </figcaption>
+</figure>
+
+<article block>
+
+<h3>Гора Монте-Визо</h3>
+
+<p>
+На пути слонов стоит гора Монте-Визо. Итальянский поэт Данте рассказывал о реке, которая начинается с этой горы:
+</p>
+
+<pre>
+Как та река, которая свой ход
+От Монте-Везо в сторону рассвета
+По Апеннинам первая ведет
+</pre>
+
+<h3>Дикий кабан с Везула</h3>
+
+<p>
+В тех же местах живёт дикий кабан, о котором рассказывал древнеримский поэт Вергилий:
+</p>
+
+
+<pre>
+Вепрь, которого бор на склонах Везула диких
+Долгие годы скрывал иль который средь топей Лаврентских
+</pre>
+
+</article>
+<aside>
+
+    <figure illustration>
+        <img src="art/alps.jpg" alt="Alps">
+    </figure>
+
+    <p>
+    К северу возвышается белая гора Mont Blanc — самая высокая вершина Альп. Князь Вяземский написал о своих впечатлениях в 1855 году:
+    </p>
+
+    <p>
+    Когда Рим воевал с Карфагеном, в Испании находилась армия со слонами. Полководец Ганнибал повёл войска через Альпы. Это был тяжёлый путь. Римляне не ожидали, что кто-то сможет пересечь горы. Воины со слонами справились и прогулялись по Италии.
+    </p>
+
+</aside>
+
+<h3>Монблан</h3>
+
+<p>
+К северу возвышается белая гора Mont Blanc — самая высокая вершина Альп. Князь Вяземский написал о своих впечатлениях в 1855 году:
+</p>
+
+<pre>
+Не видал, хоть из окна,
+Живописного Монблана —
+Гор царя и великана.
+Скрылся он вовнутрь тумана:
+У царя приёма нет.
+И не знает ваш поэт,
+Как, подъемлясь горделиво
+На престоле из сребра,
+Богом созданное диво,
+Блещет Белая Гора.
+</pre>
+
+
+<h3>Сенбернар Барри</h3>
+
+<p>
+Под белой горой живут бело-бежевые сенбернары, которых воспитывали монахи святого Бернара. Собаки учились искать людей попавших под лавину. Бегающие по скалам сенбернары откапывали пострадавших из снега и облизывали лицо, чтобы привести в чувство. Знаменитый сенбернар Барри однажды откопал мальчика и на спине отнёс к людям.
+</p>
+
+<h3>Горы Юра</h3>
+
+<p>
+Неподалёку от больших Альп стоят горы поменьше — Юра. Горы дали название Юрскому периоду в Мезозое. Здесь впервые откопали остатки далёких времён с динозаврами и папоротниками.
+</p>
+
+<h3>Бернские альпы</h3>
+
+<p>
+После Мезозоя наступил Кайнозой, мы живём в этой эре. В позднем Кайнозое, была построена самая высокая железная дорога. Чтобы подняться к вершине скалы Юнгфрау (юная дева в которую влюблён чёрный монах, легенда такая), поезд проезжает сквозь горы Мёнх и Эйгер. Одна остановка специально построена посреди пути, чтобы пассажиры любовались видом.
+</p>
+
+
+<h3>Чёртов мост</h3>
+
+<p>
+Горная дорога идёт над бурной рекой. Никто не может придумать чертёж крепкого моста, и только чёрт его знает. В награду за помощь, чёрт попросил у людей душу первого, кто перейдёт новый мост. Довольные люди обманули чёрта и пустили через мост козлёнка.
+</p>
+
+
+<h3>Переход Суворова через Альпы</h3>
+
+<p>
+Через двести лет, за козлёнком пошёл Александр Суворов. Мост охраняли французы, но суворовские солдаты атаковали как черти и прогнали врага с оборонительных позиций.
+</p>
+
+<p>
+Пройдя мост, Суворов узнал что ему дали ложное направление. Между озером и скалами нет никакой дороги. Французы сначала смеялись с другого берега озера. Но перестали, когда увидели солдат идущих через скалы. Проведя несколько дерзких переходов и успешных боёв, Суворов спас армию от окружения.
+</p>
+
+<h3>Переход Наполеона через Альпы</h3>
+
+<p>
+Через год, Наполеон Бонапарт взял свою армию и тоже прошёл через горы. Без пушек, без обозов с едой, только крепкие мужики с рюкзаками и ружьями. Как и в предыдущих историях, никто не ожидал появления солдат в неожиданном месте. Противники Наполеона удивились, растроились и покинули Швейцарию.
+</p>
+
+
+
+
+
+<h3>Сёстры Гаспарин</h3>
+
+<p>
+К концу XX века, солдаты перестали переходить Альпы и воевать друг с другом. Вместо них карабкаются по скалам туристы и альпинисты, а бегают с ружьём — биатлонисты. Три сестры — Селина, Элиза и Айта — швейцарские биатлонистки. Быстро катаются на лыжах и метко стреляют из винтовки. На латышском языке aita это овечка.
+</p>
+
+<h3>Эци — человек из льда</h3>
+
+<p>
+За пять тысяч лет до изобретения ружья, Эци ходил через горы с луком и стрелами. После прогулки Эци замёрз во льду и стал самой старой мумией человека на территории Европы.
+</p>
+
+<h3>Tre Cime di Lavaredo</h3>
+
+<p>
+Речные долины делят Альпы на части. Одна из самых красивых частей — это Доломитовы Альпы из доломита от месье Доломьё. Три вершины Тре-Чиме-ди-Лаваредо видны с далёкого расстояния и много лет служили границей между немцами и итальянцами. Немцы для краткости называют вершины Drei Zinnen, а интересная форма скал помогла альпинизму стать популярным развлечением.
+</p>
+
+<h3>Каринтия и Гросглоккнер</h3>
+
+<p>
+К востоку от Доломитовых Альп расположена красивая страна с красивым названием Каринтия. Лаванталь, Розенталь и Яунталь — это фонетическая амброзия в названиях местных долин. Но самая высокая гора всё равно называется Гросглоккнер.
+</p>
+
+<p>
+Под Гросглоккнером извивается одноимённая дорога для автомобильного туризма.
+</p>
+
+<h3>Златорог</h3>
+
+<p>
+На южной стороне Каринтии виднеется гора Триглав с тремя вершинами. Где-то там бегает белая серна Златорог с рогами из чистого золота. У Златорога есть дивный сад на горных вершинах. Только люди не могут найти этот сад из-за своей жадности.
+</p>
+
+<h3>Замок Хохостервиц</h3>
+
+<p>
+Считается самым красивым замком в Австрии. Скала под замком выглядит как огромный камень лежащий в поле. На камне растут башни и крепостные стены.
+</p>
+
+<h3>Ледяная пещера Eisriesenwelt</h3>
+
+<p>
+В горах над Зальцбургом находится огромная ледяная пещера Айсризенвельт. Внутри пещеры круглый год ледяные стены, ледяные столбы и даже ледяные мосты.
+</p>
+
+<h3>Swarovski World of Crystals</h3>
+
+<p>
+А под Инсбруком стоит музей кристаллов Swarovski. Музей охраняет огромная голова с водопадом.
+</p>
+
+</main>
+
+<footer role-footer>
+        EOC.
+</footer>
 
 
 
