--- a/app5K/__alps/index.html
+++ b/app5K/__alps/index.html
@@ -44,12 +44,12 @@
     <!-- =================================================== [HEAD OTHERS] -->
 
 </head>
-<body>
+<body class="role-content-design">
 
 <!-- =================================================== ʕ⊙ᴥ⊙ʔ  -->
 <!-- =================================================== [TOP] -->
 
-<main class="role-content role-content-design article-layout">
+<main class="article-layout">
 
 <p>v2018.8.25</p>
 
@@ -59,9 +59,49 @@
         Рис. 0. Когда Рим воевал с Карфагеном, в Испании находилась армия со слонами.
     </figcaption>
 </figure>
-<aside>
 
-    <figure illustration>
+<aside role-sidenote>
+    <section block note bg>
+        <figure illustration>
+            <img src="art/alps.jpg" alt="Alps">
+        </figure>
+
+        <p>
+        К северу возвышается белая гора Mont Blanc — самая высокая вершина Альп. Князь Вяземский написал о своих впечатлениях в 1855 году:
+        </p>
+
+        <p>
+        Когда Рим воевал с Карфагеном, в Испании находилась армия со слонами. Полководец Ганнибал повёл войска через Альпы. Это был тяжёлый путь. Римляне не ожидали, что кто-то сможет пересечь горы. Воины со слонами справились и прогулялись по Италии.
+        </p>
+    </section>
+</aside>
+
+<p>
+По северу Италии течёт река По. Такая же фамилия у американского писателя и поэта. Эдгар Аллан По придумал схему детектива, ставшую традиционной для жанра:
+</p>
+
+<section role-merge bg>
+    <section layout content-layout>
+
+        <p>Opanki</p>
+
+        <figure illustration>
+            <img src="art/alps.jpg" alt="Alps">
+        </figure>
+
+        <p>
+        К северу возвышается белая гора Mont Blanc — самая высокая вершина Альп. Князь Вяземский написал о своих впечатлениях в 1855 году:
+        </p>
+
+        <p>
+        Когда Рим воевал с Карфагеном, в Испании находилась армия со слонами. Полководец Ганнибал повёл войска через Альпы. Это был тяжёлый путь. Римляне не ожидали, что кто-то сможет пересечь горы. Воины со слонами справились и прогулялись по Италии.
+        </p>
+
+    </section>
+</section>
+
+<section block note bg>
+    <figure>
         <img src="art/alps.jpg" alt="Alps">
     </figure>
 
@@ -72,12 +112,14 @@
     <p>
     Когда Рим воевал с Карфагеном, в Испании находилась армия со слонами. Полководец Ганнибал повёл войска через Альпы. Это был тяжёлый путь. Римляне не ожидали, что кто-то сможет пересечь горы. Воины со слонами справились и прогулялись по Италии.
     </p>
-
+</section>
+<aside role-sidenote>
+    <section block note>
+        <p>
+        Когда Рим воевал с Карфагеном, в Испании находилась армия со слонами. Полководец Ганнибал повёл войска через Альпы. Это был тяжёлый путь. Римляне не ожидали, что кто-то сможет пересечь горы. Воины со слонами справились и прогулялись по Италии.
+        </p>
+    </section>
 </aside>
-
-<p>
-По северу Италии течёт река По. Такая же фамилия у американского писателя и поэта. Эдгар Аллан По придумал схему детектива, ставшую традиционной для жанра:
-</p>
 
 <figure illustration>
     <img src="art/europe-map.svg" alt="Alps"  width="100%">
@@ -86,7 +128,15 @@
     </figcaption>
 </figure>
 
+<section class="layer bg">
+    <h3>Jlbyjrbq ckjq</h3>
+</section>
+
+
+
 <h3>Эдгар Аллан По</h3>
+
+
 
 <p>
 По северу Италии течёт река По. Такая же фамилия у американского писателя и поэта. Эдгар Аллан По придумал схему детектива, ставшую традиционной для жанра:
@@ -98,20 +148,35 @@
     <li>разоблачение преступника.
 </ol>
 
-<h3>Ганнибал Барка и слоны</h3>
+<aside role-sidenote>
+    <p>
+    Когда Рим воевал с Карфагеном, в Испании находилась армия со слонами. Полководец Ганнибал повёл войска через Альпы. Это был тяжёлый путь. Римляне не ожидали, что кто-то сможет пересечь горы. Воины со слонами справились и прогулялись по Италии.
+    </p>
+</aside>
+
+<header class="block bg">
+    <h3>Ганнибал Барка и слоны</h3>
+</header>
 
 <p>
 Когда Рим воевал с Карфагеном, в Испании находилась армия со слонами. Полководец Ганнибал повёл войска через Альпы. Это был тяжёлый путь. Римляне не ожидали, что кто-то сможет пересечь горы. Воины со слонами справились и прогулялись по Италии.
 </p>
 
-<figure illustration is-different>
+<figure illustration bg>
     <img src="art/alps-title.svg" alt="Alps" width="100%">
     <figcaption>
         Рис. 2. Когда Рим воевал с Карфагеном, в Испании находилась армия со слонами.
     </figcaption>
 </figure>
 
-<article block>
+<figure block bg>
+    <img src="art/alps-title.svg" alt="Alps" width="100%">
+    <figcaption>
+        Рис. 2. Когда Рим воевал с Карфагеном, в Испании находилась армия со слонами.
+    </figcaption>
+</figure>
+
+<article block bg>
 
 <h3>Гора Монте-Визо</h3>
 
@@ -138,8 +203,8 @@
 </pre>
 
 </article>
-<aside>
-
+<aside role-sidenote>
+    <div class="block note">
     <figure illustration>
         <img src="art/alps.jpg" alt="Alps">
     </figure>
@@ -151,7 +216,7 @@
     <p>
     Когда Рим воевал с Карфагеном, в Испании находилась армия со слонами. Полководец Ганнибал повёл войска через Альпы. Это был тяжёлый путь. Римляне не ожидали, что кто-то сможет пересечь горы. Воины со слонами справились и прогулялись по Италии.
     </p>
-
+    </div>
 </aside>
 
 <h3>Монблан</h3>
