wrap-two-columns

--- a/app5K/__alps/eg.html
+++ b/app5K/__alps/eg.html
@@ -51,39 +51,37 @@
 
 <main class="role-content-design article-layout">
 
-    <header layer bg>
-        <h1>Self-Service Casino</h1>
-    </header>
+<header layer bg>
+    <h1>Self-Service Casino</h1>
+</header>
 
-    <h2>Key advantage</h2>
+<h2>Key advantage</h2>
 
-    <aside role-sidenote>
-        <section block note bg>
-            <p>Self-Service is a unique time-effective solution from SoftGamings, which gives you unlimited customization opportunities. Within the framework of the Self-service solution you receive technical documentation and a set of scripts without a design from SoftGamings. With the help of these, you can build your own casino, and our company will help you every step of the way.</p>
-        </section>
-    </aside>
+<aside role-sidenote>
+    <section block note bg>
+        <p>Self-Service is a unique time-effective solution from SoftGamings, which gives you unlimited customization opportunities. Within the framework of the Self-service solution you receive technical documentation and a set of scripts without a design from SoftGamings. With the help of these, you can build your own casino, and our company will help you every step of the way.</p>
+    </section>
+</aside>
 
-    <p>The changes in the product can be made quickly, easily, on your side. You do not depend on the provider.</p>
+<p>The changes in the product can be made quickly, easily, on your side. You do not depend on the provider.</p>
 
-    <h3>On Your Side</h3>
+<h3>On Your Side</h3>
+<ul>
+    <li>Design</li>
+    <li>HTML coding</li>
+    <li>A small team of IT experts</li>
+</ul>
+
+<header layer bg>
+    <h1>On Our Side</h1>
+</header>
+
+<section wrap-two-columns>
     <ul>
         <li>Design</li>
         <li>HTML coding</li>
         <li>A small team of IT experts</li>
     </ul>
-
-    <header layer bg>
-        <h1>On Our Side</h1>
-    </header>
-
-    <h2>Key advantage</h2>
-
-    <aside role-sidenote>
-        <section block note bg>
-            <p>Self-Service is a unique time-effective solution from SoftGamings, which gives you unlimited customization opportunities. Within the framework of the Self-service solution you receive technical documentation and a set of scripts without a design from SoftGamings. With the help of these, you can build your own casino, and our company will help you every step of the way.</p>
-        </section>
-    </aside>
-
     <ul>
         <li>Technical documentation</li>
         <li>A set of scripts</li>
@@ -94,6 +92,32 @@
         <li>Free updates for the system with new functionality</li>
         <li>Back office</li>
     </ul>
+</section>
+
+<section wrap-two-columns are-equal>
+    <p>Self-Service is a unique time-effective solution from SoftGamings, which gives you unlimited customization opportunities. Within the framework of the Self-service solution you receive technical documentation and a set of scripts without a design from SoftGamings. With the help of these, you can build your own casino, and our company will help you every step of the way.</p>
+
+    <p>All the functionalities that are available for White Label and Turnkey solutions are also available for the Self-Service solution. This helps to facilitate the development process and build a casino to match your needs, if you have a team of developers.</p>
+</section>
+
+<h2>Key advantage</h2>
+
+<aside role-sidenote>
+    <section block note bg>
+        <p>Self-Service is a unique time-effective solution from SoftGamings, which gives you unlimited customization opportunities. Within the framework of the Self-service solution you receive technical documentation and a set of scripts without a design from SoftGamings. With the help of these, you can build your own casino, and our company will help you every step of the way.</p>
+    </section>
+</aside>
+
+<ul>
+    <li>Technical documentation</li>
+    <li>A set of scripts</li>
+    <li>Front-end</li>
+    <li>Support at every stage of the casino development</li>
+    <li>Engine</li>
+    <li>Testing platform</li>
+    <li>Free updates for the system with new functionality</li>
+    <li>Back office</li>
+</ul>
 
     <header layout page-layout>
 
