--- a/app5K/__alps/index.html
+++ b/app5K/__alps/index.html
@@ -49,6 +49,117 @@
 <!-- =================================================== ʕ⊙ᴥ⊙ʔ  -->
 <!-- =================================================== [TOP] -->
 
+<article class="layout-for-article design-for-markup">
+
+<p>v2018.10.21</p>
+
+<header layer bg>
+    <h2>Глава 1</h2>
+</header>
+
+<p>Шел я ночью из Кандавы в Вану. А ночь была такая темная, что если выпустить на дорогу черную кошку и черную крысу — то по черным сугробам крыса всю ночь будет гоняться за кошкой. Потому что в такой темноте они сами запутаются кто из них кто.</p>
+
+<p>Мне стало интересно как они себя поведут, когда посветлеет. Сразу ли поменяются местами или же будут по привычке гоняться друг за другом в прежнем порядке. И так меня это заинтересовало, что я стал крепко смотреть по сторонам, чтобы разглядеть силуэты и не сводить с них глаз до самого рассвета. Ни крысу, ни кошку я не увидел — кто же их выпустит на дорогу в такое время. Зато, когда глаза привыкли к темноте, я разглядел лисицу.</p>
+
+<aside wrap-sidenote>
+    <section textnote>
+        <p>¹ Увидел там прекрасную девицу</p>
+        <p>² Потрогал за ягодицу — угодил в темницу</p>
+    </section>
+</aside>
+
+<pre>
+Следом за ней куницу.
+Синицу и еще какую-то птицу.
+Волчицу и, как это ни странно, тигрицу.
+Лечебную траву-медуницу.
+Перешел границу, натер ключицу, зашел в больницу.
+Увидел там прекрасную девицу.
+Потрогал за ягодицу — угодил в темницу.
+</pre>
+
+<p>А когда судья отпустил меня под честное слово, я огляделся и никого больше не увидел. Только лишь снежные поля, силуэты деревьев и редкие огоньки у горизонта. У одного из огоньков, в маленьком домике сидел старый немец.</p>
+
+<aside wrap-sidenote>
+    <section note>
+        <div block bg>
+        <p>¹ Увидел там прекрасную девицу</p>
+        <p>² Потрогал за ягодицу — угодил в темницу</p>
+        </div>
+    </section>
+</aside>
+
+<pre>
+Следом за ней куницу.
+Синицу и еще какую-то птицу.
+Волчицу и, как это ни странно, тигрицу.
+Лечебную траву-медуницу.
+Перешел границу, натер ключицу, зашел в больницу.
+Увидел там прекрасную девицу.
+Потрогал за ягодицу — угодил в темницу.
+</pre>
+
+<pre>
+Следом за ней куницу.
+Синицу и еще какую-то птицу.
+Волчицу и, как это ни странно, тигрицу.
+Лечебную траву-медуницу.
+Перешел границу, натер ключицу, зашел в больницу.
+Увидел там прекрасную девицу.
+Потрогал за ягодицу — угодил в темницу.
+</pre>
+
+<aside wrap-sidenote>
+    <section note>
+        <figure illustration>
+            <img src="art/alps.jpg" alt="Alps">
+        </figure>
+        <p>К северу возвышается белая гора Mont Blanc — самая высокая вершина Альп. Князь Вяземский написал о своих впечатлениях в 1855 году:</p>
+        <p>Когда Рим воевал с Карфагеном, в Испании находилась армия со слонами. Полководец Ганнибал повёл войска через Альпы. Это был тяжёлый путь. Римляне не ожидали, что кто-то сможет пересечь горы. Воины со слонами справились и прогулялись по Италии.</p>
+    </section>
+</aside>
+
+<pre>
+Следом за ней куницу.
+Синицу и еще какую-то птицу.
+Волчицу и, как это ни странно, тигрицу.
+Лечебную траву-медуницу.
+Перешел границу, натер ключицу, зашел в больницу.
+Увидел там прекрасную девицу.
+Потрогал за ягодицу — угодил в темницу.
+</pre>
+
+<section block bg>
+    <p>Следом за ней куницу.
+Синицу и еще какую-то птицу.
+Волчицу и, как это ни странно, тигрицу.
+Лечебную траву-медуницу.
+Перешел границу, натер ключицу, зашел в больницу.
+Увидел там прекрасную девицу.
+Потрогал за ягодицу — угодил в темницу.</p>
+</section>
+
+    <p>Следом за ней куницу.
+Синицу и еще какую-то птицу.
+Волчицу и, как это ни странно, тигрицу.
+Лечебную траву-медуницу.
+Перешел границу, натер ключицу, зашел в больницу.
+Увидел там прекрасную девицу.
+Потрогал за ягодицу — угодил в темницу.</p>
+
+<pre>
+Следом за ней куницу.
+Синицу и еще какую-то птицу.
+Волчицу и, как это ни странно, тигрицу.
+Лечебную траву-медуницу.
+Перешел границу, натер ключицу, зашел в больницу.
+Увидел там прекрасную девицу.
+Потрогал за ягодицу — угодил в темницу.
+</pre>
+
+
+</article>
+
 <main class="article-layout">
 
 <p>v2018.8.25</p>
@@ -80,7 +191,7 @@
 По северу Италии течёт река По. Такая же фамилия у американского писателя и поэта. Эдгар Аллан По придумал схему детектива, ставшую традиционной для жанра:
 </p>
 
-<section role-merge bg>
+<section wrap-row bg>
     <section layout content-layout>
 
         <p>Opanki</p>
