--- a/app5K/__alps/vane.html
+++ b/app5K/__alps/vane.html
@@ -49,7 +49,7 @@
 <!-- =================================================== ʕ⊙ᴥ⊙ʔ  -->
 <!-- =================================================== [TOP] -->
 
-<main class="role-content-design article-layout">
+<article class="layout-for-article design-for-markup">
 
 <header layer bg>
     <h1>Кандава Вана</h1>
@@ -58,16 +58,16 @@
 <p>Шел я ночью из Кандавы в Вану. Вот ведь парадокс — городки маленькие, а дорога между ними совсем нет. Умные люди и при солнечном свете не любят таких долгих прогулок, да только я дурак дураком. А что делать? Времена нынче такие, что никто к себе на сеновал переночевать не пустит, а скорее кинет в тебя коробкой из под сони-эриксона. И закричит: «Проваливай, чертов черт, в свою Вану!». Я и проваливаю, мне же не страшно!</p>
 
 <header layer bg>
-    <h3>Глава 1</h3>
+    <h2>Глава 1</h2>
 </header>
 
 <p>Шел я ночью из Кандавы в Вану. А ночь была такая темная, что если выпустить на дорогу черную кошку и черную крысу — то по черным сугробам крыса всю ночь будет гоняться за кошкой. Потому что в такой темноте они сами запутаются кто из них кто.</p>
 
 <p>Мне стало интересно как они себя поведут, когда посветлеет. Сразу ли поменяются местами или же будут по привычке гоняться друг за другом в прежнем порядке. И так меня это заинтересовало, что я стал крепко смотреть по сторонам, чтобы разглядеть силуэты и не сводить с них глаз до самого рассвета. Ни крысу, ни кошку я не увидел — кто же их выпустит на дорогу в такое время. Зато, когда глаза привыкли к темноте, я разглядел лисицу.</p>
 
-<aside role-sidenote>
-    <section block note>
-        <p>Потрогал за ягодицу — угодил в темницу</p>
+<aside wrap-sidenote>
+    <section textnote>
+        <p>¹ Потрогал за ягодицу — угодил в темницу</p>
     </section>
 </aside>
 
@@ -85,8 +85,8 @@
 
 <p>— <em>Дядюшка, Ханс!</em> — поздоровался я с хозяином, — <em>расскажите мне про Магдалену Нойер. Почему она бегает как лиса, а стреляет как охотник? И почему от этого у нее так много золотых медалей и ни одного мужа. Тогда как братья Дукурисы и мужья знатные и медаль у них только одна серебрянная на двоих.</em></p>
 
-<aside role-sidenote>
-    <section block note bg>
+<aside wrap-sidenote>
+    <section note bg>
         <p>Старик налил мне молока, поставил миску с бобами и ломоть мягкого деревенского хлеба. Мне бы твои годы сынок, говорит, я бы и сам как Магдалена встал на лыжи. Потому что как ни крути, а на лыжах куда сподручнее сбегать к соседке за солью. И убежал.</p>
     </section>
 </aside>
@@ -96,6 +96,12 @@
 <p>И забрал с собою бобы, хлеб, огонек и маленький домик. Передо мною как были снежные поля и дорога, так они и остались. Только молоко старик не забрал — кружка разлилась, и от этого снег сделался еще белее. И от этой белизны грусть белая на меня накатила. Как же так, убежал старик и даже не попрощался. И как же я так невежливо без приглашения сел за стол со своими вопросами. Решил больше так никогда не делать.</p>
 
 <p>Так и быть, говорю. Теперь всегда буду говорить: здравствуйте, я Зиновий, у меня в рюкзаке есть тельняшка.  И как только я решил быть вежливым, сразу грусть ушла. А тут и рыбный обоз меня нагнал.</p>
+
+<aside wrap-sidenote>
+    <figure note>
+        <img src="../art/ready.svg" height="150" alt="">
+    </figure>
+</aside>
 
 <section block bg>
 
@@ -113,12 +119,15 @@
 
 <p>Нитро — это ускоритель на маленьких гоночных машинках в компьютерных играх. Беларусь, скорее всего от усталости. А Маткуле от Айзупе. Еще в детстве бабушка говорила — маткуле от айзупе недалеко падает. В маткуле ходить - коленки холодить. Кому спица в сапоге, а кому и дом родной — маткуле.</p>
 
+<section block wrap-row bg>
 
-<p>Вспоминая бабушкины поговорки я вышел к развилке с дорожным знаком. На знаке было написано:</p>
+    <p>Вспоминая бабушкины поговорки я вышел к развилке с дорожным знаком. На знаке было написано:</p>
 
-<div style="text-align:center;font-size:1.4em">← Сабиле 12км, Кабиле 30км →</div>
+    <div style="text-align:center;font-size:1.4em">← Сабиле 12км, Кабиле 30км →</div>
 
-<p>И очень я испугался, потому что я на самом деле не знал куда надо идти. Умные люди уже смеются надо мною, и говорят что надо идти в Сабиле, потому что до него всего 12 километров. А до Кабиле идти три года. Но я уклонялся от усмешек. Годы нам не помеха и эти ваши километры тоже.</p>
+    <p>И очень я испугался, потому что я на самом деле не знал куда надо идти. Умные люди уже смеются надо мною, и говорят что надо идти в Сабиле, потому что до него всего 12 километров. А до Кабиле идти три года. Но я уклонялся от усмешек. Годы нам не помеха и эти ваши километры тоже.</p>
+
+</section>
 
 <p>Из под скамейки послышался голос — а ты подбрось монетку. Куда судьба укажет, туда и пойдешь. Но этот голос я тоже не слушал. Потому что под скамейкой сидел хитрый цыган. И если я подброшу монетку — она упадет в сугроб, и пойди попробуй ее отыщи. Когда снега вокруг не меньше чем в Сибири, а светит только маленький карманный фонарик. Цыган ведь только этого и ждет, чтобы монетка упала. Сам он весною сюда придет, быстро схватит монетку и за щеку положит.</p>
 
@@ -127,31 +136,43 @@
 <p>А если ты по глупости ведешь за собою корову на веревочке — то цыган тут же найдет доказательство своих слов. Скажет что это его потерянная корова (точно такое же пятно на шее) и заберет с собою. Я решил никого не слушать а вспоминать слова на буквы С и К. Если хороших, добрых слов на букву С окажется больше — пойду в Сабиле. А если иначе — в Кабиле. Ведь ничем другим эти городки не должны отличаться.</p>
 
 <ul>
-<li>солнце
-<li>счастье
-<li>снык
+    <li>солнце
+    <li>счастье
+    <li>снык...
 </ul>
 
-<p>Нет такого слова «снык». Но вы сами попробуйте быстро назвать доброе слово на букву С и у вас получится снык.</p>
+<section note bg>
+    <p>... Нет такого слова «снык». Но попробуйте очень быстро назвать доброе слово на букву С. Получится какой-то снык.</p>
+</section>
 
-<ul>
-<li>сладкое
-<li>сестренка
-<li>сказка
-<li>спасибо
-<li>сто арбузов
-</ul>
+<div wrap-two-columns>
 
-<ul>
-<li>королева
-<li>карусель
-<li>чеширский кот
-<li>крем-брюле
-<li>кадиллак
-<li>карусель (повторяюсь)
-</ul>
+    <ul>
+        <li>сладкое
+        <li>сестренка
+        <li>сказка
+        <li>спасибо
+        <li>сто арбузов
+    </ul>
+
+    <ul>
+        <li>королева
+        <li>карусель
+        <li>чеширский кот
+        <li>крем-брюле
+        <li>кадиллак
+        <li>карусель (повторяюсь)
+    </ul>
+
+</div>
+
 
 <p>И тогда я сообразил, что в Кабиле живут немного эгоистичные люди. Которые хотят, чтобы у них был и кадиллак, и крем-брюле, и карусель во дворе. А в Сабиле живут люди высокой духовности, желающие счастья и солнца каждому. Мне никак не хочется считать себя эгоистом, но ведь каждый перед этим знаком думает точно так же и сворачивает в Сабиле. Может быть оттого в Кабиле и люди такие, что никто к ним не ходит и вестей добрых не приносит.</p>
+
+<figure illustration bg>
+    <img src="../art/It_Is_Time.jpg" alt="">
+    <figcaption>никто к ним не ходит и вестей добрых не приносит</figcaption>
+</figure>
 
 <p>Поднявшись со скамейки и смахнув крошки цыгану я зашагал в сторону Кабиле. Но сначала по дороге надо было нарвать добрых вестей.</p>
 
@@ -183,7 +204,7 @@
 </ul>
 
 
-<h3>Глава 2</h3>
+<h2>Глава 2</h2>
 
 <p>Не всегда радостно на душе. Как пройду часа два, начнет спина ныть, коленки ультиматум ставить «вот сейчас начнем болеть — и что ты будешь делать?». Присаживаться снова на пять минут нет смысла. Тут есть только два варианта — либо у тебя открывается второе дыхание, либо ты терпишь и ждешь пока откроется второе дыхание. Сразу вспоминается что даже поговорить не с кем. Один ты вышел на эту дорогу, один ты и бредешь по ней. Молчи и думай.</p> 
 
@@ -400,7 +421,7 @@
 
 <p><em>Посвящается Мише Ладыженскому,<br>пошедшему короткой дорогой.</em></p>
 
-</main>
+</article>
 
 
 <!-- =================================================== ʕ⊙ᴥ⊙ʔ  -->
