--- a/app5K/__alps/eg.html
+++ b/app5K/__alps/eg.html
@@ -49,7 +49,43 @@
 <!-- =================================================== ʕ⊙ᴥ⊙ʔ  -->
 <!-- =================================================== [TOP] -->
 
-<main class="role-content-design article-layout">
+<article class="layout-for-markup design-for-markup">
+
+    <h2>Key advantage</h2>
+
+    <p>Self-Service is a unique time-effective solution from SoftGamings, which gives you unlimited customization opportunities. Within the framework of the Self-service solution you receive technical documentation and a set of scripts without a design from SoftGamings. With the help of these, you can build your own casino, and our company will help you every step of the way.</p>
+
+    <div style="grid-column: aside;background: pink;">
+        simple aside text
+    </div>
+
+    <div class="bb-merge" style="background: red;">
+        <p>bb-merge</p>
+        <p>bb-merge</p>
+        <p>bb-merge</p>
+    </div>
+
+    <p>The changes in the product can be made quickly, easily, on your side. You do not depend on the provider.</p>
+
+    <div class="bb-aside" style="background: pink;">
+        <p>complex aside text</p>
+        <p>bb-merge</p>
+        <p>complex aside text</p>
+    </div>
+
+<p>Self-Service is a unique time-effective solution from SoftGamings, which gives you unlimited customization opportunities. Within the framework of the Self-service solution you receive technical documentation and a set of scripts without a design from SoftGamings. With the help of these, you can build your own casino, and our company will help you every step of the way.</p>
+
+    <div class="bb-block" style="background: yellow;">
+        <p>overmain</p>
+        <p>overmain</p>
+        <p>overmain</p>
+    </div>
+
+<p>Self-Service is a unique time-effective solution from SoftGamings, which gives you unlimited customization opportunities. Within the framework of the Self-service solution you receive technical documentation and a set of scripts without a design from SoftGamings. With the help of these, you can build your own casino, and our company will help you every step of the way.</p>
+
+</article>
+
+<article class="layout-for-article design-for-markup">
 
 <header layer bg>
     <h1>Self-Service Casino</h1>
@@ -57,7 +93,7 @@
 
 <h2>Key advantage</h2>
 
-<aside role-sidenote>
+<aside wrap-sidenote>
     <section block note bg>
         <p>Self-Service is a unique time-effective solution from SoftGamings, which gives you unlimited customization opportunities. Within the framework of the Self-service solution you receive technical documentation and a set of scripts without a design from SoftGamings. With the help of these, you can build your own casino, and our company will help you every step of the way.</p>
     </section>
