--- a/app5K/__alps/eg.html
+++ b/app5K/__alps/eg.html
@@ -33,6 +33,7 @@
     <script src="app/vendor/flubber/build/flubber.min.js"></script>
     <!-- / core script -->
     <script src="app/script/app_core.js"></script>
+    <script src="app/script/app_libs.js"></script>
     <!-- / -->
 
     <!-- ## Custom settings below-->
@@ -49,57 +50,117 @@
 <!-- =================================================== ʕ⊙ᴥ⊙ʔ  -->
 <!-- =================================================== [TOP] -->
 
-<article class="layout-for-markup design-for-markup">
-
-    <h2>Key advantage</h2>
-
-    <p>Self-Service is a unique time-effective solution from SoftGamings, which gives you unlimited customization opportunities. Within the framework of the Self-service solution you receive technical documentation and a set of scripts without a design from SoftGamings. With the help of these, you can build your own casino, and our company will help you every step of the way.</p>
-
-    <div style="grid-column: aside;background: pink;">
-        simple aside text
-    </div>
-
-    <div class="bb-merge" style="background: red;">
-        <p>bb-merge</p>
-        <p>bb-merge</p>
-        <p>bb-merge</p>
-    </div>
-
-    <p>The changes in the product can be made quickly, easily, on your side. You do not depend on the provider.</p>
-
-    <div class="bb-aside" style="background: pink;">
-        <p>complex aside text</p>
-        <p>bb-merge</p>
-        <p>complex aside text</p>
-    </div>
-
-<p>Self-Service is a unique time-effective solution from SoftGamings, which gives you unlimited customization opportunities. Within the framework of the Self-service solution you receive technical documentation and a set of scripts without a design from SoftGamings. With the help of these, you can build your own casino, and our company will help you every step of the way.</p>
-
-    <div class="bb-block" style="background: yellow;">
-        <p>overmain</p>
-        <p>overmain</p>
-        <p>overmain</p>
-    </div>
-
-<p>Self-Service is a unique time-effective solution from SoftGamings, which gives you unlimited customization opportunities. Within the framework of the Self-service solution you receive technical documentation and a set of scripts without a design from SoftGamings. With the help of these, you can build your own casino, and our company will help you every step of the way.</p>
-
-</article>
-
 <article class="layout-for-article design-for-markup">
 
-<header layer bg>
+<header layer-row bg bg-b is-centered>
     <h1>Self-Service Casino</h1>
 </header>
 
-<h2>Key advantage</h2>
+<p>Self-Service is a unique time-effective solution from SoftGamings, which gives you unlimited customization opportunities. Within the framework of the Self-service solution you receive technical documentation and a set of scripts without a design from SoftGamings. With the help of these, you can build your own casino, and our company will help you every step of the way.</p>
 
-<aside wrap-sidenote>
-    <section block note bg>
-        <p>Self-Service is a unique time-effective solution from SoftGamings, which gives you unlimited customization opportunities. Within the framework of the Self-service solution you receive technical documentation and a set of scripts without a design from SoftGamings. With the help of these, you can build your own casino, and our company will help you every step of the way.</p>
+<figure textnote>
+    <img src="../art/ready.svg" class="zzz" alt="">
+</figure>
+
+<section note bg bg-g>
+<p>Self-Service is a unique time-effective solution from SoftGamings, which gives you unlimited customization opportunities. Within the framework of the Self-service solution you receive technical documentation and a set of scripts without a design from SoftGamings. With the help of these, you can build your own casino, and our company will help you every step of the way.</p>
+</section>
+
+<section block bg-g>
+    <p>Self-Service is a unique time-effective solution from SoftGamings, which gives you unlimited customization opportunities. Within the framework of the Self-service solution you receive technical documentation and a set of scripts without a design from SoftGamings. With the help of these, you can build your own casino, and our company will help you every step of the way.</p>
+    <section block bg-r>
+        <p>With the help of these, you can build your own casino, and our company will help you every step of the way.</p>
     </section>
+    <p>With the help of these, you can build your own casino, and our company will help you every step of the way.</p>
+</section>
+
+<section block-row bg-g>
+    <p>With the help of these, you can build your own casino, and our company will help you every step of the way.</p>
+    <section block bg bg-r>
+        <p>With the help of these, you can build your own casino, and our company will help you every step of the way.</p>
+    </section>
+    <p>Self-Service is a unique time-effective solution from SoftGamings, which gives you unlimited customization opportunities. Within the framework of the Self-service solution you receive technical documentation and a set of scripts without a design from SoftGamings. With the help of these, you can build your own casino, and our company will help you every step of the way.</p>
+</section>
+
+<p>With the help of these, you can build your own casino, and our company will help you every step of the way.</p>
+
+<div layer bg-b>
+    <div>
+        <p>Self-Service is a unique time-effective solution from SoftGamings, which gives you unlimited customization opportunities. Within the framework of the Self-service solution you receive technical documentation and a set of scripts without a design from SoftGamings. With the help of these, you can build your own casino, and our company will help you every step of the way.</p>
+    </div>
+</div>
+<div layer-row bg-b>
+    <div>
+        <p>Self-Service is a unique time-effective solution from SoftGamings, which gives you unlimited customization opportunities. Within the framework of the Self-service solution you receive technical documentation and a set of scripts without a design from SoftGamings. With the help of these, you can build your own casino, and our company will help you every step of the way.</p>
+    </div>
+</div>
+<div layer-block bg-b>
+    <div>
+        <p>Self-Service is a unique time-effective solution from SoftGamings, which gives you unlimited customization opportunities. Within the framework of the Self-service solution you receive technical documentation and a set of scripts without a design from SoftGamings. With the help of these, you can build your own casino, and our company will help you every step of the way.</p>
+    </div>
+</div>
+
+<p>Self-Service is a unique time-effective solution from SoftGamings, which gives you unlimited customization opportunities. Within the framework of the Self-service solution you receive technical documentation and a set of scripts without a design from SoftGamings. With the help of these, you can build your own casino, and our company will help you every step of the way.</p>
+
+<aside textnote>
+    <h4>URL here:</h4>
+    https://test.softgamings.com/products-products/
 </aside>
 
 <p>The changes in the product can be made quickly, easily, on your side. You do not depend on the provider.</p>
+
+<aside sidenote>
+    <section note bg-r>
+        <p>The changes in the product can be made quickly, easily, on your side. You do not depend on the provider.</p>
+    </section>
+</aside>
+
+<section block-left bg bg-g>
+<p>Self-Service is a unique time-effective solution from SoftGamings, which gives you unlimited customization opportunities. Within the framework of the Self-service solution you receive technical documentation and a set of scripts without a design from SoftGamings. With the help of these, you can build your own casino, and our company will help you every step of the way.</p>
+
+<p>Self-Service is a unique time-effective solution from SoftGamings, which gives you unlimited customization opportunities. Within the framework of the Self-service solution you receive technical documentation and a set of scripts without a design from SoftGamings. With the help of these, you can build your own casino, and our company will help you every step of the way.</p>
+</section>
+
+<section block-right bg bg-g>
+<p>Self-Service is a unique time-effective solution from SoftGamings, which gives you unlimited customization opportunities. Within the framework of the Self-service solution you receive technical documentation and a set of scripts without a design from SoftGamings. With the help of these, you can build your own casino, and our company will help you every step of the way.</p>
+
+<p>Self-Service is a unique time-effective solution from SoftGamings, which gives you unlimited customization opportunities. Within the framework of the Self-service solution you receive technical documentation and a set of scripts without a design from SoftGamings. With the help of these, you can build your own casino, and our company will help you every step of the way.</p>
+</section>
+
+<p>Self-Service is a unique time-effective solution from SoftGamings, which gives you unlimited customization opportunities. Within the framework of the Self-service solution you receive technical documentation and a set of scripts without a design from SoftGamings. With the help of these, you can build your own casino, and our company will help you every step of the way.</p>
+
+
+<section block-left bg bg-g>
+    <figure illustration>
+        <img src="../art/It_Is_Time.jpg" class="zzz" alt="">
+    </figure>
+    
+    <p>Self-Service is a unique time-effective solution from SoftGamings, which gives you unlimited customization opportunities. Within the framework of the Self-service solution you receive technical documentation and a set of scripts without a design from SoftGamings. With the help of these, you can build your own casino, and our company will help you every step of the way.</p>
+
+    <div layer-block bg bg-b>
+        <p>Self-Service is a unique time-effective solution from SoftGamings, which gives you unlimited customization opportunities. Within the framework of the Self-service solution you receive technical documentation and a set of scripts without a design from SoftGamings. With the help of these, you can build your own casino, and our company will help you every step of the way.</p>
+    </div>
+
+    <p>Self-Service is a unique time-effective solution from SoftGamings, which gives you unlimited customization opportunities. Within the framework of the Self-service solution you receive technical documentation and a set of scripts without a design from SoftGamings. With the help of these, you can build your own casino, and our company will help you every step of the way.</p>
+
+    <figure illustration>
+        <img src="../art/It_Is_Time.jpg" alt="">
+        <figcaption>The changes in the product can be made quickly, easily, on your side. You do not depend on the provider.</figcaption>
+    </figure>
+
+</section>
+
+<aside sidenote>
+    <figure illustration bg bg-r>
+        <img src="../art/It_Is_Time.jpg" alt="">
+        <figcaption>The changes in the product can be made quickly, easily, on your side. You do not depend on the provider.</figcaption>
+    </figure>
+</aside>
+
+
+
+
+<p>Self-Service is a unique time-effective solution from SoftGamings, which gives you unlimited customization opportunities. Within the framework of the Self-service solution you receive technical documentation and a set of scripts without a design from SoftGamings. With the help of these, you can build your own casino, and our company will help you every step of the way.</p>
 
 <h3>On Your Side</h3>
 <ul>
@@ -108,7 +169,7 @@
     <li>A small team of IT experts</li>
 </ul>
 
-<header layer bg>
+<header layer-row bg bg-b>
     <h1>On Our Side</h1>
 </header>
 
@@ -130,11 +191,21 @@
     </ul>
 </section>
 
-<section wrap-two-columns are-equal>
+<section wrap-two-columns always-equal>
     <p>Self-Service is a unique time-effective solution from SoftGamings, which gives you unlimited customization opportunities. Within the framework of the Self-service solution you receive technical documentation and a set of scripts without a design from SoftGamings. With the help of these, you can build your own casino, and our company will help you every step of the way.</p>
 
     <p>All the functionalities that are available for White Label and Turnkey solutions are also available for the Self-Service solution. This helps to facilitate the development process and build a casino to match your needs, if you have a team of developers.</p>
 </section>
+
+<p>Self-Service is a unique time-effective solution from SoftGamings, which gives you unlimited customization opportunities. Within the framework of the Self-service solution you receive technical documentation and a set of scripts without a design from SoftGamings. With the help of these, you can build your own casino, and our company will help you every step of the way.</p>
+
+<p>Self-Service is a unique time-effective solution from SoftGamings, which gives you unlimited customization opportunities. Within the framework of the Self-service solution you receive technical documentation and a set of scripts without a design from SoftGamings. With the help of these, you can build your own casino, and our company will help you every step of the way.</p>
+
+</article>
+
+<article class="layout-for-article design-for-markup">
+
+
 
 <h2>Key advantage</h2>
 
@@ -186,7 +257,7 @@
 
     </header>
 
-</main>
+</article>
 
 
 <!-- =================================================== ʕ⊙ᴥ⊙ʔ  -->
