--- a/app5K/__alps/index.html
+++ b/app5K/__alps/index.html
@@ -44,7 +44,7 @@
     <!-- =================================================== [HEAD OTHERS] -->
 
 </head>
-<body class="role-content-design">
+<body class="design">
 
 <!-- =================================================== ʕ⊙ᴥ⊙ʔ  -->
 <!-- =================================================== [TOP] -->
@@ -53,7 +53,7 @@
 
 <p>v2018.10.21</p>
 
-<header layer bg>
+<header layer-row bg>
     <h2>Глава 1</h2>
 </header>
 
@@ -61,11 +61,9 @@
 
 <p>Мне стало интересно как они себя поведут, когда посветлеет. Сразу ли поменяются местами или же будут по привычке гоняться друг за другом в прежнем порядке. И так меня это заинтересовало, что я стал крепко смотреть по сторонам, чтобы разглядеть силуэты и не сводить с них глаз до самого рассвета. Ни крысу, ни кошку я не увидел — кто же их выпустит на дорогу в такое время. Зато, когда глаза привыкли к темноте, я разглядел лисицу.</p>
 
-<aside wrap-sidenote>
-    <section textnote>
-        <p>¹ Увидел там прекрасную девицу</p>
-        <p>² Потрогал за ягодицу — угодил в темницу</p>
-    </section>
+<aside textnote>
+    <p>¹ Увидел там прекрасную девицу</p>
+    <p>² Потрогал за ягодицу — угодил в темницу</p>
 </aside>
 
 <pre>
