--- a/app5K/__appSeed/index.html
+++ b/app5K/__appSeed/index.html
@@ -23,24 +23,32 @@
     <!-- ## Critical Bootstrap CSS -->
     <style>
         html { margin:0; padding:0; }
-        body { margin:0; padding:1rem; }
+        body { margin:0; padding:0; }
         img, svg { max-width:100%; }
     </style>
-
+   
+    <!-- ## Core style -->
+    <link href="app/style/app.css" rel="stylesheet" type="text/css">
 
     <!-- ## Custom settings below-->
     <link href="app/style/ordnung.css" rel="stylesheet" type="text/css" media="all" />
     <script src="app/script/ordnung.js"></script>
-    <!-- / -->
 
     <!-- =================================================== ʕ⊙ᴥ⊙ʔ  -->
-    <!-- =================================================== [HEAD OTHERS] -->
+    <!-- =================================================== [HEAD CUSTOMS] -->
 
+    <!-- ... -->
 
 </head>
-<body class="design">
+<body class="design-for-markup">
 
+    <article class="layout-for-article">
 
+        <h1>xoxox_H1_xoxox</h1>
+
+        <p>xoxox_CONTENT_xoxox</p>
+
+    </article>
 
 </body>
 </html>
